---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : char(32768)"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(1))) TyRef(Error)
def_kinds:
    DefId(0) Var(TyRef(Error))
error at 13..18: invalid character count size
| note for 13..18: computed count is 32768
| info: valid sizes are between 1 to 32767
